@@ -4,6 +4,10 @@ linux-2.6-openmoko (20080903.git2ea34171-2) UNRELEASED; urgency=low
     + correctly capitalize FreeRunner in uImage name.
     + s/Openmoko/Debian/ in uImage name.
     + s/VERSION/VERSION_EXTRA/ since it's used as make's EXTRAVERSION.
+    + new variable VERSION_FULL which reflects the real Linux kernel
+      version (VERSION-PATCHLEVEL-SUBLEVEL) and it's used to identify
+      the vmlinuz image, thus the latter and the modules directory
+      use the same version.
 
  --
 
